# mongo-validations-generator

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  run_tests.yml
mongo_validations_generator/: bson_type.py  custom_types.py
mongo_validator/: bson_type.py  core.py  schema.py
tests/: test_generate_basic_bson.py  test_generate_bson_for_list.py  test_generate_bson_for_union.py
