[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongo_validations_generator"
version = "1.0.0"
description = "Generate MongoDB validation schemas from Python type annotations and Pydantic models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "mongo_validations_generator.*"
check_untyped_defs = true
